--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-python-telegram-bot==21.6
-fastapi==0.115.0
-uvicorn==0.30.0
+fastapi==0.111.0
+uvicorn==0.23.2
+python-telegram-bot==20.6
+requests==2.31.0
